fix BUG mit overflow

--- a/world/main.css
+++ b/world/main.css
@@ -1,5 +1,5 @@
 body {
-    overflow: hidden;
+    margin: 0;
 }
 #map {
     width: 100vw;
